--- a/ErcaspaySDK.Core/ErcaspaySDK.Core.csproj
+++ b/ErcaspaySDK.Core/ErcaspaySDK.Core.csproj
@@ -30,6 +30,9 @@
     <Folder Include="Utils\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
   
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.11.0" />
